[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-automation-hub"
version = "0.1.0"
description = "All-in-One high-load CLI automation platform and server combiner"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "london-x" }
]
dependencies = [
    "ruff>=0.15.20",
]

[project.scripts]
mycmd = "cli_runner:main_entry"
